# django-delayed-replication

./: .gitignore  Dockerfile  README  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
main/: routers.py
postgresql/: Dockerfile  add-delay-to-slave.sh  entrypoint.sh  libpostgresql.sh
replication/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
replication/migrations/: 0001_initial.py
