[tool.poetry]
name = "django-delayed-replication"
version = "0.1.0"
description = ""
authors = ["Rayhan Muktader <rmuktader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
django-extensions = "^3.1.3"

[tool.poetry.dev-dependencies]
ptvsd = "^4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
